--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,36 +7,39 @@
   padding: 0;
   margin: 0;
   justify-self: center;
+  align-self: center;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 768px){
   .lead__image{
-    max-width: 768px;
-    max-height: 480px;
+    /*max-width: 768px;
+    max-height: 480px;*/
     margin: 40px 0 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
   .lead__image{
-    max-width: 928px;
-    max-height: 580px;
+    /*max-width: 928px;
+    max-height: 580px;*/
     margin: 56px 0 0;
   }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px){
   .lead__image{
-    max-width: 984px;
-    max-height: 615px;
+
     margin: 56px 0 0;
+    /*min-width: 928px;
+    min-height: 580px;*/
   }
 }
 
 @media screen and (min-width: 1280px){
   .lead__image{
-    max-width: 984px;
-    max-height: 615px;
+    /*max-width: 984px;
+    max-height: 615px;*/
     margin: 64px 0 0;
   }
 }
