--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,30 +1,30 @@
 .lead{
-  display: flex;
-  flex-direction: column;
+  display: grid;
   margin: 0 auto;
+  justify-content: center;
 }
 
 @media screen and (max-width: 768px){
   .lead{
-    max-width: 768px;
+    grid-template-columns: minmax(320px, 768px);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
   .lead{
-    max-width: 928px;
+    grid-template-columns: minmax(768px, 928px);
   }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px){
   .lead{
-    max-width: 984px;
+    grid-template-columns: minmax(928px, 984px);
   }
 }
 
 @media screen and (min-width: 1280px){
   .lead{
-    max-width: 984px;
+    grid-template-columns: 984px;
   }
 }
 
