--- a/pages/index.css
+++ b/pages/index.css
@@ -14,4 +14,9 @@
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
-@import url(../blocks/lead/__image-zone/lead__image-zone.css);
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/intro__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+
