--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,7 @@
 
 .lead__image{
   background-image: url(../../../images/lead-polka.jpg);
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 62.5vw;
   padding: 0;
