--- a/pages/index.css
+++ b/pages/index.css
@@ -20,3 +20,6 @@
 @import url(../blocks/intro/intro__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
