--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,23 +2,17 @@
   display: grid;
   margin: 0 auto;
   justify-content: center;
+  grid-template-columns: 1fr;
 }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 1024px){
   .lead{
-    grid-template-columns: minmax(320px, 768px);
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px){
-  .lead{
-    grid-template-columns: minmax(768px, 928px);
+    grid-template-columns: minmax(320px , 928px)
   }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px){
   .lead{
-    grid-template-columns: minmax(928px, 984px);
+    grid-template-columns: 928px;
   }
 }
 
