--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,14 +6,14 @@
   .photo-grid{
     grid-template-columns: 1fr;
     row-gap: 12px;
-    margin: 0 16px;
+    margin: 64px 16px 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
 .photo-grid{
   grid-template-columns: repeat( 2 , minmax(288px ,1fr));
-  margin: 0 24px;
+  margin: 88px 24px 0;
   gap: 16px;
 }
 }
@@ -21,7 +21,7 @@
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
   .photo-grid{
     grid-template-columns: repeat( 3 , minmax(300px ,1fr));
-    margin: 0 48px;
+    margin: 92px 48px 0;
     gap: 14px;
   }
 }
@@ -29,7 +29,7 @@
 @media screen and (min-width: 1280px) {
   .photo-grid{
     grid-template-columns: repeat( 4, minmax(284px ,1fr));
-    margin: 0 48px;
+    margin: 92px 48px 0;
     gap: 16px;
   }
 }
