--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -18,8 +18,15 @@
   }
 }
 
-@media screen and (min-width:768px) and (max-width: 1024px) {
+@media screen and (min-width:768px) {
   .intro__list{
     margin-left: 24px;
   }
 }
+
+@media screen and (min-width: 1280px){
+  .intro__list{
+  margin-left: 0 ;
+  }
+}
+
