--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -25,9 +25,17 @@
 
 @media screen and (min-width: 1024px) {
   .intro__title{
-    margin: 0;
+    margin: 0 0 0 24px;
     font-size: 54px;
     line-height: 58px;
   }
 }
 
+@media screen and (min-width: 1280px){
+  .intro__title{
+
+  margin: 0 ;
+  font-size: 54px;
+  line-height: 58px;
+  }
+}
