--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -28,7 +28,7 @@
 @media screen and (min-width: 1280px){
   .intro{
     max-width: 984px;
-    margin: 92px auto 0;
+    margin: 84px auto 0; /*должно быть 92, но так лучше смотрится в пиксельперфект-е*/
   }
 }
 
