--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,7 @@
 .photo-grid{
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  padding: 0;
 }
 @media screen and (max-width: 768px) {
   .photo-grid{
