--- a/pages/index.css
+++ b/pages/index.css
@@ -22,4 +22,5 @@
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__img/photo-grid__img.css);
 
