--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,6 +4,7 @@
   max-width: 176px;
   justify-self: start;
   align-self: center;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
