--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,11 +3,13 @@
   font-style: normal;
   font-weight: normal;
   color:white;
-  margin-top: 8px;
+  margin: 8px 0 0;
   font-size: 10px;
   line-height: 1.4;
   text-transform: uppercase;
   letter-spacing: 1.5px;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
