--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,6 +4,7 @@
   width: 100%;
   padding-bottom: 62.5%;
   background-size: contain;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
