--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,16 +6,30 @@
   align-self: center;
   text-align: center;
   margin: 0;
+  max-width: 720px;
+  justify-self: center;
+  box-sizing: border-box;
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 520px) {
   .lead__title{
     font-size: 40px;
     line-height: 44px;
     margin: 48px 0 0;
+    max-width: 320px;
+  }
+
+}
+@media screen and (min-width: 520px) and (max-width: 700px) {
+  .lead__title{
+    font-size: 70px;
+    line-height: 104%;
+    margin: 48px 0 0;
+    max-width: 590px ;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1280px) {
+@media screen and (min-width: 700px) and (max-width: 1280px) {
   .lead__title{
     font-size: 96px;
     line-height: 100px;
