--- a/blocks/photo-grid/__img/photo-grid__img.css
+++ b/blocks/photo-grid/__img/photo-grid__img.css
@@ -1,6 +1,6 @@
 .photo-grid__img{
-  max-width: 100%;
+  width: 100%;
   object-position: center;
-  object-fit: contain;
+  object-fit: cover;
   display: block;
 }
