--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,8 @@
 .photo-grid{
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(auto-fit, 1fr);
   padding: 0;
+  box-sizing: border-box;
 }
 @media screen and (max-width: 768px) {
   .photo-grid{
@@ -13,7 +14,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
 .photo-grid{
-  grid-template-columns: repeat( 2 , minmax(288px ,1fr));
+  grid-template-columns: repeat( auto-fit, minmax(288px ,1fr));
   margin: 88px 24px 0;
   gap: 16px;
 }
@@ -21,7 +22,7 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
   .photo-grid{
-    grid-template-columns: repeat( 3 , minmax(300px ,1fr));
+    grid-template-columns: repeat(auto-fit , minmax(300px ,1fr));
     margin: 92px 48px 0;
     gap: 14px;
   }
@@ -29,7 +30,7 @@
 
 @media screen and (min-width: 1280px) {
   .photo-grid{
-    grid-template-columns: repeat( 4, minmax(284px ,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(284px ,1fr));
     margin: 92px 48px 0;
     gap: 16px;
   }
