--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,3 +1,74 @@
 .cover__link{
   text-decoration: none;
+  background: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  width: 100%;
+  min-height: 200px;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  margin: 66px 0 0;
+  max-width: 1184px;
+  z-index: 0;
+  display: grid;
+
+  grid-template-areas:
+  "title"
+  "subtitle";
+  justify-content: center;
+  position: relative;
 }
+
+.cover__link:before{
+  content: "";
+  position: absolute;
+  background: rgba(42, 44, 47, 0.3);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.cover__link:hover::before{
+  content: "";
+  background: rgba(42, 44, 47, 0.8);
+}
+
+@media screen and (max-width:416px) {
+  .cover__link{
+    min-height: 200px;
+  }
+}
+
+@media screen and (min-width: 416px) and (max-width:600px) {
+  .cover__link{
+    min-height: 260px;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width:768px) {
+  .cover__link{
+    min-height: 375px;
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+  .cover__link{
+    min-height: 480px;
+    margin: 92px auto 0;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width:1280px) {
+  .cover__link{
+    min-height: 640px;
+    margin: 92px auto 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__link{
+    min-height: 740px;
+    margin: 92px auto 0;
+  }
+}
+
