--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright{
-  font-family: Inter;
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -7,16 +7,12 @@
   grid-area: copyright;
   color: #FFFFFF;
   margin: 0;
+  justify-self: end;
 }
 
 @media screen and (max-width: 768px) {
   .footer__copyright{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
     line-height: 14px;
-    /* identical to box height, or 100% */
   }
 }
 
