--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,29 +1,20 @@
 .footer__link{
-  font-family: Inter;
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   text-decoration: none;
   color: #FFFFFF;
+  font-size: 24px;
+  line-height: 24px;
+  transition: opacity .5s;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__link{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 24px;
-    /* identical to box height, or 100% */
-  }
-}
-
-@media screen and (min-width: 768px){
-  .footer__link{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
     font-size: 16px;
     line-height: 18px;
-    /* identical to box height, or 112% */
   }
+}
+.footer__link:hover{
+  opacity: 80%;
 }
