--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,18 +1,16 @@
 .footer__links{
-  /*display: flex;
-  flex-direction: row;*/
   padding: 0;
   box-sizing: border-box;
-  /*justify-content: start;*/
-
+  list-style: none;
   display: grid;
-  grid-template-columns: repeat(5, max-content); /* почему-то хром не пропускает параметры ауто-фит*/
-  gap: 18px;
+  grid-template-columns: repeat(1, max-content);
+  gap: 32px;
+  margin: 0;
 }
 
-@media  screen and (max-width: 768px) {
+@media  screen and (min-width: 768px) {
   .footer__links{
-    grid-template-columns: repeat(1, max-content);
-    gap: 32px;
+    grid-template-columns: repeat(5, max-content); /* почему-то хром не пропускает параметры ауто-фит*/
+    gap: 18px;
   }
 }
