--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,21 +1,16 @@
 .footer{
+  margin: 92px auto 0;
+  max-width: 1184px;
   display: grid;
   padding: 0 0 24px;
   box-sizing: border-box;
-}
-@media screen and (max-width: 768px){
-  .footer{
-
-    row-gap: 48px;
-    justify-items: start;
-    margin: 64px 16px 0;
-  }
-}
-@media screen and (max-width: 768px) {
-  .footer{
-    grid-template-areas:
+  grid-template-areas:
     "links"
     "copyright";
+}
+
+@media screen and (max-width: 768px) {
+  .footer{
     margin: 64px 16px 0;
     row-gap: 48px;
     justify-items: start;
@@ -26,12 +21,12 @@
   .footer{
     justify-content: space-between;
     align-items: end;
-    grid-template-areas: "links copyright";
     margin: 88px 24px 0;
+    grid-template-areas: "links copyright";
   }
 }
 
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px) and (max-width: 1280px){
   .footer{
     margin: 92px 48px 0;
     justify-content: space-between;
