--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,11 @@
 .header{
   justify-content: center;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "logo lang-links";
   grid-template-rows: fit-content(80px);
+  max-width: 1184px;
 }
