--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,16 +1,16 @@
 .intro__title{
-  font-family: 'Inter';
+  font-family: Inter, 'arial', sans-serif;
   font-style:  normal;
   font-weight: 900;
   color:white;
   margin: 0;
   box-sizing: border-box;
+  font-size: 32px;
+  line-height: 35px;
 }
 
 @media screen and (max-width: 768px) {
   .intro__title{
-    font-size: 32px;
-    line-height: 35px;
     margin: 0 16px;
   }
 
@@ -18,9 +18,9 @@
 
 @media screen and (min-width: 768px) and (max-width:1024px){
   .intro__title{
+    margin: 0 24px;
     font-size: 54px;
     line-height: 58px;
-    margin: 0 24px;
   }
 }
 
@@ -34,9 +34,6 @@
 
 @media screen and (min-width: 1280px){
   .intro__title{
-
-  margin: 0;
-  font-size: 54px;
-  line-height: 58px;
+    margin: 0;
   }
 }
