--- a/blocks/intro/intro__text/intro__text.css
+++ b/blocks/intro/intro__text/intro__text.css
@@ -1,5 +1,5 @@
 .intro__text{
-  font-family: 'Inter';
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   color: white;
