--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption{
-  font-family: Inter;
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   color:white;
