--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   justify-content: center;
   grid-template-columns: 1fr;
+  width: 100%;
+  max-width: 1184px;
+  box-sizing: border-box;
 }
 @media screen and (max-width: 1024px){
   .lead{
