--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,37 +1,7 @@
 .photo-grid{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 1fr);
+  width: 100%;
+  margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
-}
-@media screen and (max-width: 768px) {
-  .photo-grid{
-    grid-template-columns: 1fr;
-    row-gap: 12px;
-    margin: 64px 16px 0;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-.photo-grid{
-  grid-template-columns: repeat( auto-fit, minmax(288px ,1fr));
-  margin: 88px 24px 0;
-  gap: 16px;
-}
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .photo-grid{
-    grid-template-columns: repeat(auto-fit , minmax(300px ,1fr));
-    margin: 92px 48px 0;
-    gap: 14px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .photo-grid{
-    grid-template-columns: repeat(auto-fit, minmax(284px ,1fr));
-    margin: 92px 48px 0;
-    gap: 16px;
-  }
+  max-width: 1184px;
 }
