--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,12 +1,13 @@
 .place__link{
   grid-area: link;
-  font-family: Inter;
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   color: white;
   align-self: end;
   font-size: 18px;
   line-height: 22px;
+  transition: opacity .5s;
 }
 
 .place__link:hover{
