--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph{
-  font-family: 'Inter';
+  font-family: Inter, 'arial', sans-serif;
   color: white;
   font-size: 16px;
   line-height: 26px;
@@ -13,7 +13,5 @@
   .place__paragraph{
     font-size: 18px;
     line-height: 29px;
-    font-family: 'Inter';
-    color: white;
   }
 }
