--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,7 +2,7 @@
   grid-area: title;
   margin: 0;
   padding: 0;
-  font-family: 'Inter';
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   color: white;
