--- a/blocks/place/__url-headlink/place__url-headlink.css
+++ b/blocks/place/__url-headlink/place__url-headlink.css
@@ -3,7 +3,7 @@
   margin: 0 0 12px 0;
   padding: 0;
   color: white;
-  font-family: Inter;
+  font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -14,16 +14,14 @@
 
 @media screen and (max-width: 1024px) {
   .place__url-headlink{
-    font-size: 12px;
     line-height: 12px;
   }
 }
 
 @media screen and (min-width: 1024px) {
  .place__url-headlink{
-  font-size: 12px;
   line-height: 170%;
   /* or 20px */
-  letter-spacing: 2px;
+
  }
 }
