--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places{
   display: grid;
   box-sizing: border-box;
+  max-width: 1184px;
 }
 
 @media screen and (max-width: 768px) {
@@ -26,7 +27,7 @@
 
 @media screen and (min-width: 1280px) {
  .places{
-   margin: 92px 148px 0;
+   margin: 92px auto 0;
    gap: 80px;
  }
 }
