--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,15 +1,8 @@
 .intro__list{
-  font-family: Inter, 'arial', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  color: white;
   list-style-type: none;
-  margin: 0;
   padding: 0;
-  font-size: 12px;
-  line-height: 18px;
-  margin-top: 33px;
   box-sizing: border-box;
+  margin: 33px 0 0;
 }
 
 
