after-second-review

--- a/blocks/place/__url-headlink/place__url-headlink.css
+++ b/blocks/place/__url-headlink/place__url-headlink.css
@@ -2,7 +2,7 @@
   grid-area: link;
   margin: 0 0 12px 0;
   padding: 0;
-  color: white;
+  color: #aaa;
   font-family: Inter, 'arial', sans-serif;
   font-style: normal;
   font-weight: normal;
