--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -20,8 +20,14 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1280px){
   .header__lang-links{
     margin: 46px 48px 0 0;
+  }
+}
+
+@media screen and (min-width: 1280px){
+  .header__lang-links{
+    margin: 46px 0 0;
   }
 }
