--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -23,10 +23,19 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
   .header__logo{
     width: 176px;
     height: 52px;
     margin: 28px 0 0 48px;
   }
 }
+
+@media screen and (min-width: 1280px){
+  .header__logo{
+    width: 176px;
+    height: 52px;
+    margin: 28px 0 0;
+  }
+}
+
