--- a/blocks/intro/intro__text/intro__text.css
+++ b/blocks/intro/intro__text/intro__text.css
@@ -17,8 +17,8 @@
 
 @media screen and (min-width:768px) and (max-width: 1024px) {
   .intro__text{
-    margin: 40px 24px 0;
-
+    margin: 40px 24px 0 24px;
+    max-width: 690px;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
