--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,12 +1,12 @@
 .place__website{
   grid-area: link;
   align-self: end;
-  margin: 0;
+  margin: 32px 16px 0;
   padding: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .place__website{
-    margin: 32px 16px 0;
+    margin: 0;
   }
 }
