--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,6 +2,8 @@
   display: grid;
   box-sizing: border-box;
   max-width: 984px;
+  justify-content: center;
+  align-content: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -15,13 +17,15 @@
   .places{
     margin: 88px 24px 0;
     gap: 73px;
+
   }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
   .places{
-    margin: 92px 48px 0;
+    margin: 92px auto 0;
     gap: 80px;
+    max-width: 928px;
   }
 }
 
